Adds pagination for the forum pages.
Some repeated boilerplate code, but it's at least easily read

--- a/nablapps/nablaforum/templates/nablaforum/channel.html
+++ b/nablapps/nablaforum/templates/nablaforum/channel.html
@@ -32,4 +32,23 @@
     <button type="submit">Opprett en ny tråd</button>
 </form>
 
+
+{% if is_paginated %}
+    <span class="step-links">
+        {% if threads.has_previous %}
+            <a href="?page={{ threads.previous_page_number }}">previous</a>
+        {% endif %}
+
+        <span class="current">
+            Page {{ threads.number }} of {{ threads.paginator.num_pages }}.
+        </span>
+
+        {% if threads.has_next %}
+            <a href="?page={{ threads.next_page_number }}">next</a>
+        {% endif %}
+    </span>
+
+{% endif %}
+
+
 {% endblock main %}
