--- a/nablapps/nablaforum/templates/nablaforum/index.html
+++ b/nablapps/nablaforum/templates/nablaforum/index.html
@@ -23,7 +23,18 @@
 
 <h4>Felleskanaler</h4>
 {% for channel in common_channels %}
-    <a href="{% url "channel-index" channel_id=channel.pk %}"><li class="thread box"><h4 class="title">{{ channel.name }}</h4><h4 class="group"></h4></li></a>
+    <a href="{% url "channel-index" channel_id=channel.pk %}">
+        <li class="thread box">
+            <h4 class="title">
+                {{ channel.name }}
+            </h4>
+            <h4 class="group">
+                {% if channel.has_unreads %}
+                    Uleste meldinger!
+                {% endif %}
+            </h4>
+        </li>
+    </a>
 {% endfor %}
 
 
@@ -35,7 +46,18 @@
 
 <h4>Dine gruppers kanaler</h4>
 {% for channel in channels %}
-    <a href="{% url "channel-index" channel_id=channel.pk %}"><li class="thread box"><h4 class="title">{{ channel.name }}</h4><h4 class="group">{{ channel.group.name }}</h4></li></a>
+    <a href="{% url "channel-index" channel_id=channel.pk %}">
+        <li class="thread box">
+            <h4 class="title">
+                {{ channel.name }}
+            </h4>
+            <h4 class="group">
+                {% if channel.has_unreads %}
+                    Uleste meldinger!
+                {% endif %}
+            </h4>
+        </li>
+    </a>
 {% endfor %}
 
 
@@ -60,6 +82,5 @@
         {% endif %}
     </span>
 {% endif %}
-
 
 {% endblock main %}
