Hides form for creating thread in common channels.
Common channels are meant to be more of a one way news feed from e.g.
the board, and new threads here are currently planned to be made in
admin. Just hiding the form in the template is not a very secure
sollution, but It can be improved on eventually.

--- a/nablapps/nablaforum/templates/nablaforum/channel.html
+++ b/nablapps/nablaforum/templates/nablaforum/channel.html
@@ -43,6 +43,8 @@
 {% endfor %}
 </ul>
 
+
+{% if not channel.is_common %}
 <form method="POST">
     {% csrf_token %}
     <h4>Ny tråd:</h4>
@@ -50,6 +52,7 @@
     {{ form.as_p }}
     <button type="submit">Opprett en ny tråd</button>
 </form>
+{% endif %}
 
 
 {% if is_paginated %}
