Formats code golf menu as a table

--- a/nablapps/interactive/templates/interactive/codetask_list.html
+++ b/nablapps/interactive/templates/interactive/codetask_list.html
@@ -1,11 +1,30 @@
 {% extends "base.html" %}
 {% block main %}
 
-<h1>So you think you can code</h1>
-<ul>
-{% for Task in object_list %}
-	<a href="{% url 'code_golf' Task.id %}">{{ Task.title }}</a>
-{% endfor %}
-</ul>
+<h1>So you think you can code </h1>
+<h3> Webkoms kodegolf </h3>
+<h4> Nyeste kodegolf: <a href="{% url 'code_golf' newest_task.id %}">{{newest_task.title}}</a> </h4>
 
+<br>
+<table style="width:50%">
+	<tr>
+		<th> Oppgave </th> 
+		<th> Beste resultat </th> 
+		<th> Ditt resultat </th> 
+	</tr>
+	{% for Task in object_list %}
+		<tr>
+			<td> <a href="{% url 'code_golf' Task.id %}">{{Task.title}}</a> </td>
+			<td> 
+				{{best_result.length}}
+				{% if best_result == user_result %}
+					(Ey det er deg, jo!)
+				{% else %}
+					({{ best_result.user.get_full_name}}) 
+				{% endif %}
+			</td>
+			<td> {{user_result.length}} </td>
+		</tr>
+	{% endfor %}
+</table>
 {% endblock %}
