--- a/nablapps/nablaforum/static/nablaforum/forum.css
+++ b/nablapps/nablaforum/static/nablaforum/forum.css
@@ -3,6 +3,7 @@
     padding-bottom: 45px;
     padding-top: 20px;
     padding-left: 20px;
+    margin-right: 20px;
     margin-bottom: 10px;
     background-color: #f0f0f0;
 }
@@ -18,6 +19,7 @@
 .title{
     float: left;
     color: black;
+    margin: 0;
 }   
 
 .meta{
